--- a/PYTHON BASIC PRACTICE/PYTHONBASIC.ipynb
+++ b/PYTHON BASIC PRACTICE/PYTHONBASIC.ipynb
@@ -754,6 +754,397 @@
     "else:\n",
     "    print (f\"the number_list is not contained the given number {number}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 26. Write a Python program to create a histogram from a given list of integers.\n",
+    "# 2365\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**\n",
+      "***\n",
+      "******\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "def histogram(item):\n",
+    "    for i in item:\n",
+    "        output = ''\n",
+    "        times = i\n",
+    "        while times>0:\n",
+    "            output += \"*\"\n",
+    "            times -= 1\n",
+    "        print (output)\n",
+    "histo = histogram([2,3,6,5])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 27. Write a Python program that concatenates all elements in a list into a string and returns it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12356\n",
+      ".......................\n",
+      "geeks\n",
+      ".......................\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'12356'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_into_str(l1):\n",
+    "    my_str = ''\n",
+    "    for i in l1:\n",
+    "        my_str+= str(i)\n",
+    "    return my_str   \n",
+    "\n",
+    "l1 = [1,2,3,5,6]\n",
+    "print (convert_into_str(l1))\n",
+    "print ('.......................')\n",
+    "list1 = ['g', 'e', 'e', 'k', 's']\n",
+    "print(\"\".join(list1))\n",
+    "print ('.......................')\n",
+    "l1 = [\"1\",\"2\",\"3\",\"5\",\"6\"]\n",
+    "my_str = \"\"\n",
+    "my_str.join(l1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Write a Python program to print all even numbers from a given list of numbers in the same order and stop printing any after 237 in the sequence.\n",
+    "# Sample numbers list :\n",
+    "\n",
+    "# numbers = [    \n",
+    "# 386, 462, 47, 418, 907, 344, 236, 375, 823, 566, 597, 978, 328, 615, 953, 345, \n",
+    "# 399, 162, 758, 219, 918, 237, 412, 566, 826, 248, 866, 950, 626, 949, 687, 217, \n",
+    "# 815, 67, 104, 58, 512, 24, 892, 894, 767, 553, 81, 379, 843, 831, 445, 742, 717, \n",
+    "# 958,743, 527]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[386, 462, 418, 344, 236, 566, 978, 328, 162, 758, 918, 412, 566, 826, 248, 866, 950, 626, 104, 58, 512, 24, 892, 894, 742, 958]\n",
+      "[47, 907, 375, 823, 597, 615, 953, 345, 399, 219, 237, 949, 687, 217, 815, 67, 767, 553, 81, 379, 843, 831, 445, 717, 743, 527]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [    \n",
+    "    386, 462, 47, 418, 907, 344, 236, 375, 823, 566, 597, 978, 328, 615, 953, 345, \n",
+    "    399, 162, 758, 219, 918, 237, 412, 566, 826, 248, 866, 950, 626, 949, 687, 217, \n",
+    "    815, 67, 104, 58, 512, 24, 892, 894, 767, 553, 81, 379, 843, 831, 445, 742, 717, \n",
+    "    958,743, 527\n",
+    "    ]\n",
+    "even_number = []\n",
+    "odd_number = []\n",
+    "for i in numbers:\n",
+    "    if i%2==0:\n",
+    "        even_number.append(i)\n",
+    "    else:\n",
+    "        odd_number.append(i)\n",
+    "print (even_number)\n",
+    "print (odd_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 29. Write a Python program that prints out all colors from color_list_1 that are not present in color_list_2.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Black', 'brown', 'White'}\n",
+      "..........................\n",
+      "{'Black', 'brown', 'White'}\n",
+      "{'pink'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "color_list_1 = set([\"White\", \"Black\", \"Red\",\"Green\",\"brown\"])\n",
+    "color_list_2 = set([\"Red\", \"Green\"])\n",
+    "duplicate_color = color_list_1.intersection(color_list_2)\n",
+    "for i in duplicate_color:\n",
+    "    color_list_1.remove(i)\n",
+    "\n",
+    "print (color_list_1)\n",
+    "print (\"..........................\")\n",
+    "color_list_1 = set([\"White\", \"Black\", \"Red\",\"Green\",\"brown\"])\n",
+    "color_list_2 = set([\"Red\", \"Green\",\"pink\"])\n",
+    "print (color_list_1.difference(color_list_2))\n",
+    "print (color_list_2.difference(color_list_1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 30. Write a Python program that will accept the base and height of a triangle and compute its area.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area = 100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def area (b,h):\n",
+    "    area = ((1/2)*b*h)\n",
+    "    return f\"area = {(area)}\"\n",
+    "print (area(10,20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 31. Write a Python program that computes the greatest common divisor (GCD) of two positive integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The GCD for 336 and 360 is 24\n",
+      "The GCD for 12 and 17 is 1\n",
+      "The GCD for 4 and 6 is 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gcd(number1 , number2):\n",
+    "    start_div = int(min(number1,number2)/2)\n",
+    "    for i in range(start_div,0,-1):\n",
+    "        if (number1 %i==0) and (number2%i==0):\n",
+    "            \n",
+    "            return (f\"The GCD for {number1} and {number2} is {i}\")\n",
+    "print (gcd(336,360))\n",
+    "print (gcd(12,17))\n",
+    "print (gcd(4,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 32. Write a Python program to find the least common multiple (LCM) of two positive integers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The LCM for 336 and 360 is 5040\n",
+      "The LCM for 12 and 17 is 204\n",
+      "The LCM for 4 and 6 is 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gcd(number1 , number2):\n",
+    "    start_div = int(max(number1,number2))\n",
+    "    end_div = int(number1*number2)\n",
+    "\n",
+    "    for i in range(start_div,end_div+1,1):\n",
+    "        if (i % number1==0) and (i % number2 == 0):\n",
+    "            \n",
+    "            return (f\"The LCM for {number1} and {number2} is {i}\")\n",
+    "print (gcd(336,360))\n",
+    "print (gcd(12,17))\n",
+    "print (gcd(4,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 33. Write a Python program to sum three given integers. However, if two values are equal, the sum will be zero.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "def condition_sum(x,y,z):\n",
+    "    \n",
+    "    if x == y or y == z or x == z:\n",
+    "        sum = 0\n",
+    "    else:\n",
+    "        sum = x + y + z\n",
+    "\n",
+    "    return sum\n",
+    "print (condition_sum(10,15,20))\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 34. Write a Python program to sum two given integers. However, if the sum is between 15 and 20 it will return 20.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "20\n",
+      "20\n",
+      "20\n",
+      "20\n",
+      "35\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def condition_sum(x,y):\n",
+    "\n",
+    "    sum = x + y\n",
+    "    if sum < 20 and sum > 15:\n",
+    "        sum = 20\n",
+    "    else:\n",
+    "        sum = x + y\n",
+    "\n",
+    "    return sum\n",
+    "print (condition_sum(10,5))\n",
+    "print (condition_sum(10,6))\n",
+    "print (condition_sum(11,5))\n",
+    "print (condition_sum(11,6))\n",
+    "print (condition_sum(10,7))\n",
+    "print (condition_sum(10,25))\n",
+    "print (condition_sum(10,20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 35. Write a Python program that returns true if the two given integer values are equal or their sum or difference is 5.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def condition_sum(x,y):\n",
+    "    diff = abs(x - y)\n",
+    "    sum = x + y\n",
+    "    if x == y:\n",
+    "        return True\n",
+    "    elif sum == 5:\n",
+    "        return True\n",
+    "    elif diff==5:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "print (condition_sum(2,3))\n",
+    "print (condition_sum(12,7))\n",
+    "print (condition_sum(7,7))\n",
+    "print (condition_sum(7,8))"
+   ]
   }
  ],
  "metadata": {
